Fix book list wrapping on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -389,7 +389,7 @@ a.tag:hover {
 }
 
 .influential-books-list .book-link {
-    display: block;
+    display: inline-block;
     padding-bottom: .65em;
 }
 
